--- a/client/src/pages/PricingPage.css
+++ b/client/src/pages/PricingPage.css
@@ -1,7 +1,7 @@
 .pricing-page {
   width: 100%;
   min-height: calc(100vh - var(--navbar-offset));
-  padding: 1rem var(--site-gutter, 2rem) 4rem;
+  padding: 1.75rem var(--site-gutter, 2rem) 4rem;
   box-sizing: border-box;
   color: #0f172a;
 }
